--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="hero__box">
-            <img class="hero__box-img" src="public/11.png" alt="">
+            <img class="hero__box-img" src="11.png" alt="">
         </div>
 
     </div>
