last last refactor

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/">
     <title>Hello there!</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,7 +11,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -36,7 +35,7 @@
         </div>
 
         <div class="hero__box">
-            <img class="hero__box-img" src="11.png" alt="">
+            <img class="hero__box-img" src="/11.png" alt="">
         </div>
 
     </div>
