--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="hero__box">
-            <img class="hero__box-img" src="/11.png" alt="">
+            <img class="hero__box-img" src="11.png" alt="">
         </div>
 
     </div>
